# MeshCore

ports/zephyr/: MeshCoreZephyr.cpp  arduino_compat.cpp
ports/zephyr/include/: Arduino.h  MeshCoreZephyr.h  RadioLibZephyrHal.h  Stream.h
samples/zephyr/mesh_min/: CMakeLists.txt  README.md  prj.conf  sample.yaml
samples/zephyr/mesh_min/src/: main.cpp
zephyr/: CMakeLists.txt  Kconfig  README.md  module.yml
